--- a/Sunshine/app/src/main/res/values/strings.xml
+++ b/Sunshine/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="action_settings">Settings</string>
     <string name="large_gradus">21</string>
     <string name="small_gradus">8</string>
+    <string name="action_refresh">Refresh</string>
 </resources>
